# dynamic-admin-rs

./: Cargo.toml  README.md
src/: api.rs  commands.rs  config.rs  main.rs
src/command/: exports.rs  mod.rs  organizations.rs  users.rs
