[package]
name = "dynamic-admin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
colored = "3.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.12"
config = "0.15.11"
dirs = "6.0"
async-trait = "0.1"
